[package]
name = "color"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A library for representing and manipulating colors"
keywords = ["color", "css", "rgb"]
categories = ["graphics"]
repository.workspace = true
rust-version.workspace = true

# Whilst we prepare the initial release
publish = false

[features]
default = ["std"]
std = []
libm = ["dep:libm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
# Color is entirely platform-agnostic, so only display docs for one platform
targets = []

[dependencies]

[dependencies.libm]
version = "0.2.11"
optional = true

[lints]
workspace = true
