[package]
name = "color"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A library for representing and manipulating colors"
keywords = ["color", "css", "rgb"]
categories = ["graphics"]
repository.workspace = true
rust-version.workspace = true

# Whilst we prepare the initial release
publish = false

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = []
libm = ["dep:libm"]

[dependencies]

[dependencies.libm]
version = "0.2.11"
optional = true

[lints]
workspace = true
