[package]
name = "color_operations"
version.workspace = true
license.workspace = true
edition.workspace = true
description = ""
keywords = []
categories = []
repository.workspace = true
rust-version.workspace = true

# Whilst we prepare the initial release
publish = false

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = ["color/std"]
libm = ["color/libm"]

[dependencies]
color = { workspace = true, default-features = false }

[lints]
workspace = true
